# my_rpc_example

./: Cargo.toml  README.md  build.rs
proto/: my_proto.proto
src/: client.rs  server.rs
src/pb/: myproto.rs
