[package]
name = "my_rpc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "myrpc-server"
path = "src/server.rs"

[[bin]]
name = "myrpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.7"

